<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/descrizione"
        tools:ignore="Autofill"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_descrizione"
        android:inputType="textPersonName"
        android:maxLength="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/codice"
        tools:ignore="Autofill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/hint_codice"
        android:inputType="textPersonName"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descrizione" />

    <EditText
        android:id="@+id/nome"
        tools:ignore="Autofill"
        android:layout_width="249dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/hint_nome_corso"
        android:inputType="textPersonName"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/conferma_button"
        android:layout_width="133dp"
        android:layout_height="55dp"
        android:layout_marginTop="52dp"
        android:hint="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codice"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:text="@string/inserimento_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />


</androidx.constraintlayout.widget.ConstraintLayout>