...
    <string name="dominio_studenti_unisannio">\u0040studenti.unisannio.it</string>

    <!-- stringhe per la LogDocenteActivity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_corsi">Corsi</string>
    <string name="menu_aggiungi_corso">Aggiungi Corso</string>
    <string name="nome_drower">nome</string>
    <string name="email_drower">email</string>
    <string name="desc_profilo">Immagine profilo</string>

    <!-- stringhe per la CorsoDocenteActivity -->
    <string name="menu_post">Post</string>
...
